--- a/cnext_app/styles/styles.css
+++ b/cnext_app/styles/styles.css
@@ -103,3 +103,49 @@
   max-height: 50vh;
   padding: 10px;
 }
+
+
+.container {
+  border: 1px solid lightgray;
+  height: 200px;
+  width: 700px;
+  overflow: auto;
+}
+
+html {
+  font-family: sans-serif;
+  font-size: 14px;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  font-family: arial, sans-serif;
+  table-layout: fixed;
+  width: 100%;
+}
+
+thead {
+  background: lightgray;
+  margin: 0;
+  position: sticky;
+  top: 0;
+}
+
+th {
+  border-bottom: 1px solid lightgray;
+  border-right: 1px solid lightgray;
+  padding: 2px 4px;
+  text-align: left;
+}
+
+td {
+  padding: 6px;
+}
+
+.container {
+  border: 1px solid lightgray;
+  height: 500px;
+  max-width: 900px !important;
+  overflow: auto;
+}
