fix: improve style for table when display long text

--- a/cnext_app/styles/styles.css
+++ b/cnext_app/styles/styles.css
@@ -105,7 +105,7 @@
 }
 
 
-.container {
+/* .container {
   border: 1px solid lightgray;
   height: 200px;
   width: 700px;
@@ -148,4 +148,4 @@ td {
   height: 500px;
   max-width: 900px !important;
   overflow: auto;
-}
+} */
